[package]
name = 'cv-convert'
description = 'Type conversions among famous Rust computer vision libraries'
version = '0.25.0'
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = '2021'
# edition = '2024'
documentation = 'https://docs.rs/cv-convert/'
repository = 'https://github.com/Rottschaferanders/rust-cv-convert.git'
homepage = 'https://github.com/Rottschaferanders/rust-cv-convert/'
readme = 'README.md'
license = 'MIT'

[package.metadata.docs.rs]
features = ['docs-only']

[features]
default = [
    'image_0-25',
    'imageproc_0-23',
    'opencv_0-91',
    'tch_0-16',
    # 'nalgebra_0-32',
    'nalgebra_0-33',
    'ndarray_0-15',
]
docs-only = [
    'image_0-25',
    'imageproc_0-23',
    'opencv_0-91',
    'tch_0-16',
    'nalgebra_0-32',
    'ndarray_0-15',
    'tch_0-16/doc-only',
]

[dev-dependencies]
approx = '0.5.1'
itertools = '0.11.0'
rand = '0.8.5'

[dependencies]
anyhow = '1'
num-traits = '0.2.15'
slice-of-array = '0.3.1'
half = '2.3.1'
cc = "1.0.95"
# num-traits = "0.2.18"


## Start of generated dependencies
[dependencies.image_0-23]
version = '0.23'
package = 'image'
default-features = true
features = []
optional = true

[dependencies.image_0-24]
version = '0.24'
package = 'image'
default-features = true
features = []
optional = true

[dependencies.image_0-25]
version = '0.25'
package = 'image'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-26]
version = '0.26'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-27]
version = '0.27'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-28]
version = '0.28'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-29]
version = '0.29'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-30]
version = '0.30'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-31]
version = '0.31'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-32]
version = '0.32'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-33]
version = '0.33'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.opencv_0-91]
version = '0.91'
package = 'opencv'
default-features = false
features = ['calib3d']
optional = true

[dependencies.ndarray_0-15]
version = '0.15'
package = 'ndarray'
default-features = true
features = []
optional = true

[dependencies.tch_0-16]
version = '0.16'
package = 'tch'
default-features = true
features = []
optional = true

[dependencies.imageproc_0-23]
version = '0.23'
package = 'imageproc'
default-features = true
features = []
optional = true
## End of generated dependencies


# [dependencies.image_0-23]
# version = '0.23'
# package = 'image'
# default-features = true
# features = []
# optional = true

# [dependencies.image_0-24]
# version = '0.24'
# package = 'image'
# default-features = true
# features = []
# optional = true

# [dependencies.image_0-25]
# version = '0.25'
# package = 'image'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-26]
# version = '0.26'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-27]
# version = '0.27'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-28]
# version = '0.28'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-29]
# version = '0.29'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-30]
# version = '0.30'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-31]
# version = '0.31'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-32]
# version = '0.32'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.nalgebra_0-33]
# version = '0.33'
# package = 'nalgebra'
# default-features = true
# features = []
# optional = true

# [dependencies.opencv_0-91]
# version = '0.91'
# package = 'opencv'
# default-features = false
# features = ['calib3d']
# optional = true

# [dependencies.ndarray_0-15]
# version = '0.15'
# package = 'ndarray'
# default-features = true
# features = []
# optional = true

# [dependencies.tch_0-16]
# version = '0.16'
# package = 'tch'
# default-features = true
# features = []
# optional = true

# [dependencies.imageproc_0-23]
# version = '0.23'
# package = 'imageproc'
# default-features = true
# features = []
# optional = true
